--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,6 @@
       {"src":"app.py", "use":"@vercel/python"}
     ],
     "routes": [
-      { "source": "/(.*)", "dest": "app.py" }
+      { "src": "/(.*)", "dest": "app.py" }
     ]
 }
